--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
  
 <body>
 <script>
-while(true) {
-console.log(123);
+alert("你的瀏覽器會當掉喔");
+function loop() {
+ while(true) {
+   console.log("GGGG");
+ }
 }
+ window.setInterval(( () => loop() ), 1);
+ 
+
 </script>
 </body>
  
